--- a/shopping_list.html
+++ b/shopping_list.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- <script src="script.js"></script> --> 
+  <script src="script.js"></script>  
 
 </head>
 <body>
@@ -35,7 +35,7 @@
 
       <div class="container-fluid">
         <h2>Cart</h2>
-        <table class="table table-striped">
+        <table class="table table-striped" id="cart">
           <thead>
             <tr>
               <th>Item</th>
@@ -47,32 +47,36 @@
       </div>
   
   <div class="container text-center">
-    <button type="button" class="btn btn-primary">Add Item</button>
+    <button type="button" class="btn btn-primary" id="add">Add Item</button>
   </div>
 
     </div>
-    <div class="col-sm-3 bg-light">
-        <h2 class="my-5">Totals</h2>
-        <div>
-          <table class="table table-borderless table-sm">
-            <tbody>
-              <td>Subtotal:</td>
-              <td id="subtotal">$0</td>
-            </tbody>
-            <tbody>
-              <td>Tax:</td>
-              <td id="tax">$0</td>
-            </tbody>
-            <tbody>
-              <td>Total:</td>
-              <td id="total">$0</td>
-            </tbody>
-          </table>
-        </div>
+    <div class="col-sm-3 bg-white">
+        <div class="container card bg-light">
+          <h2 class="my-5 ">Totals</h2>
+          <div>
 
-        <div class="form-group input-group">
-          <input type="text" class="form-control" placeholder="Coupon Code">
-          <button type="button" class="btn btn-primary" id="coupon_code">Apply</button>
+            <table class="table table-borderless table-sm">
+              <tbody>
+                <td>Subtotal:</td>
+                <td id="subtotal">$0</td>
+              </tbody>
+              <tbody>
+                <td>Tax:</td>
+                <td id="tax">$0</td>
+              </tbody>
+              <tbody>
+                <td>Total:</td>
+                <td id="total">$0</td>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="form-group input-group">
+            <input type="text" class="form-control" placeholder="Coupon Code">
+            <button type="button" class="btn btn-primary" id="coupon_code">Apply</button>
+          </div>
+
         </div>
 
       </div>
